	* Bug correction for DistInfo("ast1")
	* The user can now provide her personal optimizer
	* mapping functions are now robust to numeric under/overflow
	* added warning for non positive definite hessian matrices
	* added documentation for the plot method
	* Added CITATION
2017-03-27   Leopoldo Catania <leopoldo.catania@uniroma2.it>
	* DESCRIPTION (Version): New version is 0.1.7.
	* some tests have been moved from /tests/ to /inst/ExtensionTests/
	* added registration of symbols
2017-03-29   Leopoldo Catania <leopoldo.catania@uniroma2.it>
	* DESCRIPTION (Version): New version is 0.1.8.
	* Bug fix in output of BacktestDensity()
2017-03-31   Leopoldo Catania <leopoldo.catania@uniroma2.it>
	* DESCRIPTION (Version): New version is 0.1.9.
	* some unit tests were removed due to issues related to testing with
	dev or patched R versions
2017-05-13
	* DESCRIPTION (Version): New version is 0.2.0.
	* Third part optimizers which return an unnamed vector of parameres
	can be used. This is for example nloptr.
	* The nloptr package is a new dependence.
	* Starting values are now chosen using the same optimizer defined by the user.
	* Solved bug for qdist_Uni().
	* Some numerical underflow problems are now solved.
	* New distribution: Negative Binomial.
	* New distribution: Skellam.
	* New lower bound for degree of freedom is 2.01. Before was 4.0.
	* Additional argument Compute.SE for UniGASFit, MultiGASFit, UniGASRoll, MultiGASRoll.
2017-06-12
  * DESCRIPTION (Version): New version is 0.2.1.
  * Bug in MultiGASRoll()
2017-01-07
  * Bug in rmvt_mat(), the mean of the distribution was misspecified.
2017-05-07
  * New distribution: Genrealized Hyperbolic Skew Student's t
2017-10-07
  * DESCRIPTION (Version): New version is 0.2.2.
  * Bug in the visualization of uGASSim and mGASSim objects, instead of
  the B matrix the A matrix was shown.
2017-18-07
  * DESCRIPTION (Version): New version is 0.2.3.
2017-21-07
  * Added warning if the optimizer does not converge.