@@ -1,15 +1,16 @@
 Package: GAS
 Type: Package
-Title: Generalized Autoregressive Score Models
-Version: 0.2.3
+Title: Generalized Autoregressive Score Models 
+Version: 0.2.4
 Author: Leopoldo Catania [aut,cre], Kris Boudt [ctb], David Ardia [ctb]
 Maintainer: Leopoldo Catania <leopoldo.catania@uniroma2.it>
-Description: Simulate, estimate and forecast using univariate and multivariate GAS models.
+Description: Simulate, estimate and forecast using univariate and multivariate GAS models 
+  as described in Ardia et al. (2016) <url:https://ssrn.com/abstract=2825380>
 License: GPL-3
 BugReports: https://github.com/LeopoldoCatania/GAS/issues
 URL: https://github.com/LeopoldoCatania/GAS
 LazyData: TRUE
-Imports: Rcpp (>= 0.12.2), Rsolnp, MASS, xts, numDeriv, zoo, RcppNumerical
-LinkingTo: Rcpp, RcppArmadillo, RcppEigen, RcppNumerical
+Imports: Rcpp (>= 0.12.2), Rsolnp, MASS, xts, numDeriv, zoo
+LinkingTo: Rcpp, RcppArmadillo
 Depends: R (>= 3.2.0), methods
 Suggests: testthat
