@@ -750,7 +750,7 @@ Finally, if you use \proglang{R} or \pkg{GAS}, please cite the software in publi
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 The results in this paper were obtained using \proglang{R} 3.4.1 \citep{R} with the
-packages: \pkg{GAS} version 0.2.3 \citep{GAS}, \pkg{lmtest} version 0.9-35 \citep{lmtest},  \pkg{MASS} version 7.3-47 \citep{MASS.2002,MASS}, \pkg{numDeriv} version 2016.8-1 \citep{numDeriv},
+packages: \pkg{GAS} version 0.2.4 \citep{GAS}, \pkg{lmtest} version 0.9-35 \citep{lmtest},  \pkg{MASS} version 7.3-47 \citep{MASS.2002,MASS}, \pkg{numDeriv} version 2016.8-1 \citep{numDeriv},
 \pkg{Rcpp} version 0.12.12 \citep{Rcpp.2011,Rcpp}, \pkg{RcppArmadillo} version 0.7.900.2.0 \citep{RcppArmadillo.2014,RcppArmadillo}, \pkg{rugarch} version 1.3-6 \citep{rugarch}, \pkg{sandwich} version 2.3-4 \citep{zeileis.2004}, \pkg{xts} version 0.10-0 \citep{xts}, and \pkg{zoo} version 1.8-0 \citep{zoo}. Some datasets available in the package were downloaded using the \pkg{quantmod} package \citep{quantmod}, version 0.4-10. Computations were performed on Windows 10 Pro, x86\_64-w64-mingw32/x64 (64-bit) with Intel(R) Xeon(R) CPUE3-1535M v6 Max Turbo Frequency \@4.20 GHz. Full output of the computations is available in the file \code{sink\_PART\_II\_R3.4.1\_mingw32.txt} in the folder \code{inst/doc}.
 
 \proglang{R} itself and all packages used are available
@@ -855,7 +855,7 @@ Catania L, {Bill{\'e}} AG (2017).
 \bibitem[{Catania \emph{et~al.}(2017)Catania, Boudt, and Ardia}]{GAS}
 Catania L, Boudt K, Ardia D (2017).
 \newblock \emph{\pkg{GAS}: {G}eneralised Autoregressive Score Models}.
-\newblock \proglang{R}~package version 0.2.3,
+\newblock \proglang{R}~package version 0.2.4,
   \urlprefix\url{https://cran.r-project.org/package=GAS}.
 
 \bibitem[{Creal \emph{et~al.}(2011)Creal, Koopman, and Lucas}]{creal_etal.2011}
